--- a/aula14/css/styles.css
+++ b/aula14/css/styles.css
@@ -89,13 +89,12 @@ section article button {
 
 /* FOOTER */
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100px;
   background-color: #ffb90f;
+  text-align: center;
   border-radius: 20px 20px 0 0;
   color: white;
   font-size: 20px;
+  line-height: 100px;
 }
